--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
       </p>
     </div>
 
-    <div class="attribution tracking-in-expand">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/npx08" target="_blank">Npx</a>.
-    </div>
+    <footer>
+      <div class="attribution tracking-in-expand">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/npx08" target="_blank">Npx</a>.
+      </div>
+    </footer>
   </body>
 </html>
