--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | QR code component</title>
+    <title>QR code component</title>
 
     <!-- fonts -->
     <link
